<resources>
    <string name="app_name">Alodiga</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Alodiga</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="action_settings_es">Español</string>
    <string name="action_settings_en">Ingles</string>
    <string name="transaction">Operaciones</string>
    <string name="menu_buy">Comprar</string>
    <string name="menu_qr">Mi QR</string>
    <string name="menu_pay_invoice">Pagar Facturas</string>
    <string name="menu_last_activity">Ultimos Movimientos</string>
    <string name="menu_change_password">Cambiar Contraseña</string>
    <string name="menu_request_card">Solicitar Tarjeta</string>
    <string name="menu_answer_security">Preguntas de Seguridad</string>
    <string name="menu_secret_text">Frase Secreta</string>
    <string name="menu_pay_comerce">Pago QR Comercios</string>
    <string name="menu_add_bank">Agregar Banco</string>
    <string name="menu_send_money">Enviar Dinero</string>
    <string name="menu_convert">Convertir</string>
    <string name="menu_recharge_with_credit_card">Recargar Billetera</string>
    <string name="menu_recharge">Recarga Manual</string>
    <string name="menu_aoutMoney">Retiro Manual</string>
    <string name="menu_transfer">Transferir</string>
    <string name="menu_recharge_n_i">TopUp</string>
    <string name="menu_remesas">Remesas</string>
    <string name="menu_request_remittances">Enviar Remesa</string>
    <string name="menu_remesas_status">Consultar Remesas</string>
    <string name="afiliation">Afiliar</string>
    <string name="menu_send">Cerrar sesión</string>
    <string name="email">Introduce E-mail</string>
    <string name="email_">E-mail</string>
    <string name="emailorPhone">E-mail o teléfono</string>
    <string name="email_invalid">E-mail no es valido</string>
    <string name="email_send">Se ha enviado un E-mail.</string>
    <string name="enter_both_credentials">Ingrese ambas credenciales.</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="registered_emailid">Por favor ingrese correo electrónico registrado:</string>
    <string name="registered_emailidorphone">Por favor ingrese el correo electrónico o teléfono registrado:</string>
    <string name="register_phone_number_message">Ingrese su número de teléfono:</string>
    <string name="register_phone_number_message_dest">Número de teléfono (Destino):</string>
    <string name="register_phone_number_message_dest_">Teléfono (Destino):</string>
    <string name="register_phone_number_message_rem">Su número de teléfono (Remitente):</string>
    <string name="register_phone_number_message_rem_">Teléfono (Remitente):</string>
    <string name="register_select_country">Seleccione el país:</string>
    <string name="register_validation_invalid_long">Número de teléfono no puede estar vacio</string>
    <string name="register_validation_invalid_null_Pin">El código de validación no puede estar vacio</string>
    <string name="register_validation_invalid_long_Pin">Longitud de código de validación inválida</string>
    <string name="register_validation_mobile_code_not_match">Código de validación inválido, Numero de intentos restantes: </string>
    <string name="register_validation_limit">Demasiados intentos, repita el proceso nuevamente</string>
    <string name="register_time_finished">Se agoto el tiempo para ingresar código de validación</string>
    <string name="operator_text">Operadora:</string>
    <string name="product_spinner">Ingrese cualquier cantidad de</string>
    <string name="number_trans">Número de transacción: </string>
    <string name="dolar">$</string>
    <string name="dolar_a">$ a </string>
    <string name="increment"> con incrementos de </string>
    <string name="chip_info">Incluir comisión en monto</string>
    <string name="debitTotal">Total a debitar:</string>
    <string name="percentageRate">Tasa comisión:</string>
    <string name="destinationA">Monto convertido:</string>
    <string name="includeM">Comisión en monto:</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="a_ini">Monto a convertir:</string>
    <string name="percentage">%</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="validate_password_change_capital_letter">La contraseña debe tener al menos una letra mayúscula.</string>
    <string name="validate_password_change_lowercase_letter">La contraseña debe tener al menos una letra minúscula.</string>
    <string name="validate_password_change_number">La contraseña debe tener al menos un número.</string>
    <string name="validate_password_change_special_character">La contraseña debe tener al menos uno de los siguientes caracteres.   # ? ! @ $ % ^ * -</string>
    <string name="validate_password_change_number_characters">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="toast_different_passwords">Las contraseñas no coinciden. Inténtalo de nuevo.</string>
    <string name="required_fields">Uno o más campos están vacíos.</string>
    <string name="invalid_password">Contraseña inválida</string>
    <string name="terminal_old_password">Contraseña anterior no encontrada</string>
    <string name="terminal_repeat">La contraseña no puede ser la misma</string>
    <string name="change_succesfful">Cambio de contraseña exitoso </string>
    <string name="forgot_succesfful">Recuperación de contraseña exitosa </string>
    <string name="change_password_info">CAMBIAR CONTRASEÑA</string>
    <string name="forgot_password_info">RECUPERAR CONTRASEÑA</string>
    <string name="change_pasword_success">Cambio de contraseña</string>
    <string name="security_level">"Nivel de Seguridad"</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="repeat_password">Repita la Nueva Contraseña</string>
    <string name="change">Cambiar</string>
    <string name="information">"Información: "</string>
    <string name="close_password_recommendation">Ayuda: La contraseña debe ser alfanumérica, Debe tener al menos una mayúscula, caracteres especiales y una longuitud de 8 caracteres</string>
    <string name="currentPassword">Contraseña Actual</string>
    <string name="login">Inicio</string>
    <string name="submit">ENVIAR</string>
    <string name="next">SIGUIENTE</string>
    <string name="Finalize">FINALIZAR</string>
    <string name="back">ATRAS</string>
    <string name="signUp">REGÍSTRATE</string>
    <string name="topup_title">RECARGAS DE MOVILES NACIONALES E INTERNACIONALES</string>
    <string name="exchange_title">CONVERTIR</string>
    <string name="security_question">PREGUNTAS DE SEGURIDAD</string>
    <string name="transference_title">TRANSFERENCIA</string>
    <string name="recharge_card_title">RECARGA DE TARJETA</string>
    <string name="withdraw_card_title">RETIRO DE SALDO / TARJETA</string>
    <string name="withdraw_card_title_single_cut">Retiro de Saldo</string>
    <string name="withdraw_card_title_single">Retiro de saldo de la tarjeta </string>
    <string name="transferenceCardToCard_title">TRANSFERENCIA TARJETA A TARJETA</string>
    <string name="remesas_title">REMESAS</string>
    <string name="my_qr_title">MI QR</string>
    <string name="payment_comerce_title">PAGO QR COMERCIOS</string>
    <string name="kyc_info">VALIDAR CUENTA</string>
    <string name="qr_code_title">MI CODIGO QR</string>
    <string name="confirmation_title">CONFIRMACION</string>
    <string name="confirmation_title_">CONFIRMACION.</string>
    <string name="last_operation_title">ULTIMOS MOVIMIENTOS</string>
    <string name="confirmation_title_successfull">TRANSACCION EXITOSA</string>
    <string name="confirmation_title_successfull_Alodiga"> TRANSACCION EXITOSA / AlodigaWallet</string>
    <string name="welcome">BIENVENIDO</string>
    <string name="process">PROCESAR</string>
    <string name="process_finished">FINALIZAR</string>
    <string name="process_finished_share">COMPARTIR</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="Name_lastName">Nombre y Apellido</string>
    <string name="mobileNumber">Numero de Teléfono</string>
    <string name="table_title_exchange">Detalle</string>
    <string name="table_title_exchange_rate">Tasa de Cambio</string>
    <string name="location">Pais</string>
    <string name="location_">Pais:</string>
    <string name="commission">Comisión:</string>
    <string name="passowrd">Contraseña</string>
    <string name="already_user">¿Ya tienes cuenta? Entre aquí.</string>
    <string name="terms_conditions">Al hacer clic en Registrarse, usted acepta todos los Términos y Condiciones.</string>
    <string name="confirmPassword">Confirme Contraseña</string>
    <string name="pin">Clave de Operaciones</string>
    <string name="pin_">Token</string>
    <string name="pin_invalid">Clave de operaciones es invalida, debe tener 4 digitos</string>
    <string name="pin_info">Introduzca la Clave de Operaciones</string>
    <string name="Respuesta1">Respuesta 1</string>
    <string name="Respuesta2">Respuesta 2</string>
    <string name="Respuesta3">Respuesta 3</string>
    <string name="show_pwd">Ver Contraseña</string>
    <string name="hide_pwd">Esconder Contraseña</string>
    <string name="forgot">Olvidó su contraseña?</string>
    <string name="newUser">¿No eres miembro todavía? Registrate aquí.</string>
    <string name="password_recent">Contraseña Reciente</string>
    <string name="password_new">Contraseña Nueva</string>
    <string name="password_confirm">Confirmar Contraseña</string>
    <string name="password_eq">Las contraseñas deben ser iguales</string>
    <string name="acept_ter"> Debe aceptar terminos y condiciones.</string>
    <string name="share_with">Share with</string>
    <string name="process_change_password">Procesar Cambio</string>
    <string name="editTextTelephone">N° Teléfono</string>
    <string name="editTextIdentification">N° Cedula o RIF</string>
    <string name="buttonProcesarPago">Procesar Pago</string>
    <string name="button_recarge_card">Recargar Tarjeta</string>
    <string name="button_withdraw_card">Retirar Saldo de Tarjeta</string>
    <string name="txtIngrese">Ingrese los datos del Beneficiario: </string>
    <string name="ingrese_monto_en_bs">Monto en Bs.</string>
    <string name="ingrese_n_token">N° Token</string>
    <string name="pin_text">Introduzca una clave de 4 digitos:</string>
    <string name="kyc_text_step4_city">Introduzca la ciudad:</string>
    <string name="kyc_text_step4_city_">Ciudad</string>
    <string name="kyc_text_step4_state_1">Introduzca el estado:</string>
    <string name="kyc_text_step4_dir">Introduzca su dirección</string>
    <string name="kyc_text_step4_state_">Estado</string>
    <string name="kyc_text_step4_code">Ingrese codigo postal:</string>
    <string name="kyc_text_step4_codezip">Codigo postal</string>
    <string name="kyc_text_step4_av">Calle, Av, casa</string>
    <string name="kyc_text_step4_av_">Ingrese su calle, Av, casa:</string>
    <string name="addressee">Datos del Destinatario</string>
    <string name="Recipient_lastname">Introduzca el Apellido</string>
    <string name="reloadcard_title">RECARGAR TARJETA</string>
    <string name="name1">Introduzca el primer nombre</string>
    <string name="name2">Introduzca el segundo nombre</string>
    <string name="name1_">Primer nombre</string>
    <string name="name2_">Segundo nombre</string>
    <string name="lastname2">Introduzca el segundo apellido</string>
    <string name="lastname1_">Primer apellido</string>
    <string name="lastname2_">Segundo apellido</string>
</resources>