<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/side_nav_bar">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/remesas_title"
        android:textColor="@color/colorTitleFunction"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/addressee"
        android:layout_gravity="center"
        android:textColor="@color/white_greyish"
        android:textSize="18sp"
        android:textStyle="bold" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish"
        android:paddingTop="5dp"/>


    <TextView
        android:id="@+id/already_use_1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/name1"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="0dp"
        android:gravity="center_vertical"
        android:hint="@string/name1_"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <TextView
        android:id="@+id/already_use_1_"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/name2"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/secondname"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="0dp"
        android:gravity="center_vertical"
        android:hint="@string/name2_"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/Recipient_lastname"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="0dp"
        android:gravity="center_vertical"
        android:hint="@string/lastname1_"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/lastname2"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/secondSurmane"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="0dp"
        android:gravity="center_vertical"
        android:hint="@string/lastname2_"
        android:inputType="textCapWords"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/register_phone_number_message"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextTelephone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/email"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/userEmailIdTransfer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email_"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        />

    <View
        android:paddingTop="2dp"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <Button
        android:id="@+id/next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/next"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backToLoginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/back"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold" />


</LinearLayout>
</ScrollView>