<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:padding="15dp" >


    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="118dp"
        android:gravity="top|center"
        android:padding="10dp"
        android:text="@string/reloadcard_title"
        android:textColor="@color/colorTitleFunction"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvintentos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/white_greyish"
        android:textSize="17sp"
        android:gravity="center"/>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pin_info"
        android:textColor="@color/white_greyish"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtMobileCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:maxLength="4"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <Button
    android:id="@+id/step1_next_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@drawable/loginbutton_selector"
    android:padding="3dp"
    android:text="@string/process"
    android:textColor="@color/background_color"
    android:textSize="17sp"
    android:textStyle="bold" />
    <Button
        android:id="@+id/backToLoginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/back"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold" />


</LinearLayout>

</ScrollView>