<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:example="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background_g"
    android:padding="15dp" >
    <View
        android:id="@+id/space1"
        android:layout_width="60dp"
        android:layout_height="5dp"
        android:layout_below="@+id/simpleSwitch"
        android:layout_gravity="center"
        android:background="@color/white_greyish" />


    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:gravity="top|center"
        android:padding="10dp"
        android:text="@string/kyc_info"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgCamare"
        android:layout_width="fill_parent"
        android:layout_height="345dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <View
        android:id="@+id/botton"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <Button
        android:id="@+id/next"
        android:layout_width="275dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/backToLoginBtn"
        android:layout_width="275dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector_2"
        android:padding="3dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />



</LinearLayout>

    </ScrollView>
